Fix build issues for Java 8