@@ -6,6 +6,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -27,7 +28,7 @@ public class TestUtils {
 
     List<List<String>> result = new ArrayList<>();
     for (String line : asList) {
-      result.add(List.of(line.split(FIELD_DELIM)));
+    	result.add(Arrays.asList(line.split(FIELD_DELIM)));
     }
     return result;
   }
